# mcpradar

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  data.json  generate.py  index.html  pyproject.toml  servers.json
.claude/agents/: auth-hardening-auditor.md  ci-sarif-engineer.md  detection-rule-engineer.md  diff-snapshot-dev.md  docs-maintainer.md  package-source-scanner.md  sandbox-runtime-engineer.md  scoring-fp-engineer.md  source-analysis-engineer.md  supply-chain-analyst.md  test-qa.md  transport-specialist.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_detection_rule.yml  scan_request.yml
.github/workflows/: ci.yml  example-action.yml  leaderboard.yml  release.yml  trending.yml
demo/: malicious_server.py
docs/: api-free-servers.md  architecture.md  benchmarks.md  ci-integration.md  cli-reference.md  contributing.md  cross-server-analysis.md  data.json  demo.tape  detection-rules.md  disclosure-draft.md  disclosure.md  enterprise.md  false-positives.md  getting-started.md  index.html  owasp-mapping.md  policy-as-code.md  protocol-profiles.md  rootcause.md  scoring-model.md  servers.json  threat-model.md  writing-rules.md
docs/leaderboard/: data.json  generate.py  index.html  servers.json
plugins/mcpradar-rule-deprecated/: README.md  pyproject.toml
plugins/mcpradar-rule-deprecated/src/mcpradar_rule_deprecated/: rule.py
plugins/mcpradar-rule-deprecated/tests/: test_rule.py
plugins/template/: README.md  pyproject.toml
plugins/template/src/mcpradar_rule_example/: rule.py
plugins/template/tests/: test_rule.py
scripts/: batch_results.py  batch_scan.py  check_coverage.py  generate_rule_docs.py
src/mcpradar/: __init__.py  __main__.py  _compat.py  cli.py  config.py  enrich.py
src/mcpradar/analyzer/: context.py  report.py
src/mcpradar/audit/: __init__.py  auditor.py  stats.py
src/mcpradar/config_scan/: __init__.py  scanner.py
src/mcpradar/cvefeed/: osv.py  syncer.py
src/mcpradar/diff/: differ.py
src/mcpradar/fetch/: __init__.py  fetcher.py
src/mcpradar/fingerprint/: __init__.py  fingerprinter.py  models.py  transport_check.py
src/mcpradar/init/: initializer.py
src/mcpradar/leaderboard/: __init__.py  generator.py
src/mcpradar/network/: __init__.py  safe_http.py
src/mcpradar/output/: cef.py  console.py  sarif.py  sbom.py
src/mcpradar/plugin/: __init__.py  manager.py  runtime.py  scaffolder.py  validator.py  worker.py
src/mcpradar/policy/: __init__.py  engine.py
src/mcpradar/probe/: __init__.py  oauth.py  prober.py  sandbox.py
src/mcpradar/registry/: __init__.py  client.py  popularity.py  scanner.py
src/mcpradar/rules/: __init__.py  catalog.py
src/mcpradar/sandbox/: __init__.py  container.py
src/mcpradar/scanner/: engine.py  protocol.py  protocol_adapter.py  report.py  rules.py
src/mcpradar/schema/: __init__.py  walker.py
src/mcpradar/scoring/: __init__.py  capability.py  confidence.py  engine.py
src/mcpradar/snapshot/: __init__.py  signing.py
src/mcpradar/source/: __init__.py  analyzer.py  javascript.py  semgrep-js.yml
src/mcpradar/storage/: store.py
src/mcpradar/supply/: __init__.py  deps.py  typosquat.py
src/mcpradar/validation/: __init__.py  metrics.py
src/mcpradar/watch/: watcher.py
tests/: mock_server.py  test_audit.py  test_benchmark.py  test_capability.py  test_cli.py  test_config.py  test_config_scan.py  test_console.py  test_context_analysis.py  test_coverage_gate.py  test_cvefeed.py  test_diff.py  test_e2e.py  test_engine.py  test_enrich.py  test_enumeration.py  test_fetch.py  test_fingerprint.py  test_fuzz_boundaries.py  test_javascript_analyzer.py  test_leaderboard_refresh.py  test_oauth_r112.py  test_osv.py  test_performance_gates.py  test_plugin_cli.py  test_plugin_loading.py  test_plugin_runtime.py  test_policy.py  test_popularity.py  test_probe.py  test_protocol.py  test_protocol_adapter.py  test_registry_client.py  test_regression_gate.py  test_rule_catalog.py  test_rules.py  test_safe_http.py  test_sandbox_container.py  test_sarif.py  test_sbom.py  (+13 more)
tests/fixtures/: cve_corpus.yaml
tests/fixtures/benign_server/: echo_server.py  server.py
validation/: BENCHMARK.md  REPORT_TEMPLATE.md  conformance_client.py  labels.json  run_benchmark.py  run_trending.py  run_validation.py  setup_corpus.py  targets.yaml
validation/results/: @anthropic_server-apple-shortcuts.json  @anthropic_server-brave-search.json  @anthropic_server-clickhouse.json  @anthropic_server-commands.json  @anthropic_server-confluence.json  @anthropic_server-crypto-wallet.json  @anthropic_server-discord.json  @anthropic_server-docker.json  @anthropic_server-elasticsearch.json  @anthropic_server-everart.json  @anthropic_server-exa.json  @anthropic_server-fetch.json  @anthropic_server-gitlab.json  @anthropic_server-jira.json  @anthropic_server-kubernetes.json  @anthropic_server-langchain.json  @anthropic_server-llamaindex.json  @anthropic_server-microsoft-teams.json  @anthropic_server-mysql.json  @anthropic_server-neo4j.json  @anthropic_server-pandoc.json  @anthropic_server-pinecone.json  @anthropic_server-qdrant.json  @anthropic_server-redis.json  @anthropic_server-rss.json  @anthropic_server-sendgrid.json  @anthropic_server-sequential-thinking.json  @anthropic_server-serper.json  @anthropic_server-sqlite.json  @anthropic_server-terminal.json  @anthropic_server-time.json  @browsermcp_mcp.json  @modelcontextprotocol_server-brave-search.json  @modelcontextprotocol_server-everything.json  @modelcontextprotocol_server-filesystem.json  @modelcontextprotocol_server-git.json  @modelcontextprotocol_server-github.json  @modelcontextprotocol_server-memory.json  @modelcontextprotocol_server-postgres.json  @modelcontextprotocol_server-puppeteer.json  (+247 more)
vscode-mcpradar/: .vscodeignore  README.md  extension.js  package.json
vscode-mcpradar/syntaxes/: mcpradar-config.tmLanguage.json
