[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpradar"
version = "0.1.0"
description = "MCP server güvenlik tarayıcısı — tool poisoning ve zaafiyet tespiti"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "MCPRadar Team" }]
keywords = ["mcp", "security", "scanner", "tool-poisoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.28",
    "platformdirs>=4.0",
    "sarif-om>=1.0",
    "typer>=0.15",
    "rich>=13.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
]

[project.scripts]
mcpradar = "mcpradar.cli:app"

[project.urls]
Homepage = "https://github.com/yatuk/mcpradar"
Repository = "https://github.com/yatuk/mcpradar"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpradar"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "-p", "no:warnings"]
markers = [
    "e2e: end-to-end tests that use real MCP protocol (slow)",
]
