[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpradar"
version = "1.0.0-rc4"
description = "Security scanner for Model Context Protocol servers. Catch tool poisoning, prompt injection, and supply-chain attacks before your AI agent runs them."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Fatih Serdar Cakmak", email = "fs.cakmak05@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "security-scanner",
    "vulnerability-scanner",
    "prompt-injection",
    "tool-poisoning",
    "llm-security",
    "ai-security",
    "scanner",
    "sarif",
    "supply-chain",
    "static-analysis",
    "devsecops",
    "ci-cd",
    "owasp",
    "sast",
    "cli",
    "detection-rules",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "httpx>=0.28",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "sarif-om>=1.0",
    "typer>=0.15",
    "rich>=13.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "pyyaml>=6.0",
]

[project.scripts]
mcpradar = "mcpradar.cli:app"

[project.urls]
Homepage = "https://github.com/yatuk/mcpradar"
Documentation = "https://github.com/yatuk/mcpradar/tree/main/docs"
Repository = "https://github.com/yatuk/mcpradar"
Issues = "https://github.com/yatuk/mcpradar/issues"
Changelog = "https://github.com/yatuk/mcpradar/blob/main/CHANGELOG.md"
Leaderboard = "https://yatuk.github.io/mcpradar"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpradar"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/mcpradar"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if TYPE_CHECKING:',
    'raise NotImplementedError',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "-p", "no:warnings"]
markers = [
    "e2e: end-to-end tests that use real MCP protocol (slow)",
    "network: tests requiring network access (OSV API, etc.)",
    "slow: slow tests (MCP server scanning)",
]
